# FerroInk

./: .gitignore  Cargo.toml  Formatify.code-workspace  README.md  build.rs
Inkscape/lib/cmake/2Geom/: 2GeomTargets.cmake
Inkscape/lib/python3.11/config-3.11/: Makefile
Inkscape/lib/python3.11/lib-dynload/: _asyncio.cp311-mingw_x86_64_ucrt.pyd  _bisect.cp311-mingw_x86_64_ucrt.pyd  _blake2.cp311-mingw_x86_64_ucrt.pyd  _bz2.cp311-mingw_x86_64_ucrt.pyd  _codecs_cn.cp311-mingw_x86_64_ucrt.pyd  _codecs_hk.cp311-mingw_x86_64_ucrt.pyd  _codecs_iso2022.cp311-mingw_x86_64_ucrt.pyd  _codecs_jp.cp311-mingw_x86_64_ucrt.pyd  _codecs_kr.cp311-mingw_x86_64_ucrt.pyd  _codecs_tw.cp311-mingw_x86_64_ucrt.pyd  _contextvars.cp311-mingw_x86_64_ucrt.pyd  _csv.cp311-mingw_x86_64_ucrt.pyd  _ctypes.cp311-mingw_x86_64_ucrt.pyd  _ctypes_test.cp311-mingw_x86_64_ucrt.pyd  _curses.cp311-mingw_x86_64_ucrt.pyd  _curses_panel.cp311-mingw_x86_64_ucrt.pyd  _datetime.cp311-mingw_x86_64_ucrt.pyd  _decimal.cp311-mingw_x86_64_ucrt.pyd  _elementtree.cp311-mingw_x86_64_ucrt.pyd  _hashlib.cp311-mingw_x86_64_ucrt.pyd  _heapq.cp311-mingw_x86_64_ucrt.pyd  _json.cp311-mingw_x86_64_ucrt.pyd  _lsprof.cp311-mingw_x86_64_ucrt.pyd  _lzma.cp311-mingw_x86_64_ucrt.pyd  _md5.cp311-mingw_x86_64_ucrt.pyd  _msi.cp311-mingw_x86_64_ucrt.pyd  _multibytecodec.cp311-mingw_x86_64_ucrt.pyd  _multiprocessing.cp311-mingw_x86_64_ucrt.pyd  _opcode.cp311-mingw_x86_64_ucrt.pyd  _overlapped.cp311-mingw_x86_64_ucrt.pyd  _pickle.cp311-mingw_x86_64_ucrt.pyd  _queue.cp311-mingw_x86_64_ucrt.pyd  (+35 more)
src/: main.rs
ui/: app-window.slint
