[package]
name = "Formatify"
version = "1.0.0"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.5"
rayon = "1.10.0"
rfd = "0.15.1"
slint = "1.9.1"

[build-dependencies]
slint-build = "1.9.1"
winresource = "0.1.19"
